Added FOWD images, added Medusa post.

--- a/designing/index.html
+++ b/designing/index.html
@@ -82,8 +82,8 @@ page-title: Allen Tan is…designing
       <ul>
         <li>Gidon<em>, founder</em></li>
         <li><a href="https://twitter.com/#!/heynathan">Nathan Heleine</a><em>, creative director</em></li>
-        <li>Jeff<em>, front-end developer</em></li>
-        <li>Michael<em>, front-end developer</em></li>
+        <li><a href="https://twitter.com/jeffschram">Jeff Schram</a><em>, front-end developer</em></li>
+        <li><a href="https://twitter.com/createbang">Michael Phillips</a><em>, front-end developer</em></li>
         <li><a href="https://twitter.com/#!/ednacional">Ed Nacional</a><em>, identity</em></li>
         <li><a href="https://twitter.com/#!/pauloctavious">Paul Octavious</a><em>, photographer</em></li>
       </ul>
