Switch to https

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ layout: default
         </tr>
         <tr>
           <td>Stet</td>
-          <td><a href='http://stet.editorially.com/articles/attention-rhythm-and-weight/'>Attention, Rhythm &amp; Weight</a></td>
+          <td><a href='https://stet.editorially.com/articles/attention-rhythm-and-weight/'>Attention, Rhythm &amp; Weight</a></td>
         </tr>
         <tr>
           <td>Contents Magazine</td>
-          <td><a href='http://contentsmagazine.com/articles/made-to-measure/'>Made to Measure</a></td>
+          <td><a href='https://contentsmagazine.com/articles/made-to-measure/'>Made to Measure</a></td>
         </tr>
       </tbody>
     </table>
