--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
     <h1>Allen Tan</h1>
     <span class='label'>Product designer, editor, strategist</span>
 
-    <span class='bigspan'>Currently at ACLU — ➀&nbsp;working on the 2020 elections, ➁&nbsp;making tools for organizers, and ➂&nbsp;?????.</span>
+    <span class='bigspan'>Currently at ProPublica — ➀&nbsp;working on editorial design, ➁&nbsp;design systems and platform, and ➂&nbsp;?????.</span>
 
     <p><a href='/work' class='bigLink'>See Selected Work</a></p>
 
